# live-comment-ai

./: .gitignore  README.md  prompt.txt  pyproject.toml  settings.toml
src/: capture.py  main.py
